[project]
name = "lsp-ruff"
version = "1.0"
dependencies = [
    "ruff==0.15.9",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
ignore = []
select = [
    "E",
    "F",
    "W",
    "I",
]
preview = true

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
from-first = true
no-sections = true
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.pyright]
pythonVersion = "3.8"
